add host healthy
