# pkg/api/sgroups/v1/services.pb.gw.go
@@ -506,6 +506,33 @@ func local_request_SGroupsHostsAPI_UpdMetaInfo_0(ctx context.Context, marshaler 
 	return msg, metadata, err
 }
 
+func request_SGroupsHostsAPI_UpdHealthStatus_0(ctx context.Context, marshaler runtime.Marshaler, client SGroupsHostsAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq HostReq_UpdHealthStatus
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.UpdHealthStatus(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_SGroupsHostsAPI_UpdHealthStatus_0(ctx context.Context, marshaler runtime.Marshaler, server SGroupsHostsAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq HostReq_UpdHealthStatus
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.UpdHealthStatus(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_SGroupsHostsAPI_ListSocketStatistics_0(ctx context.Context, marshaler runtime.Marshaler, client SGroupsHostsAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq HostReq_SocketStatistics_List
@@ -1511,6 +1538,26 @@ func RegisterSGroupsHostsAPIHandlerServer(ctx context.Context, mux *runtime.Serv
 		}
 		forward_SGroupsHostsAPI_UpdMetaInfo_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_UpdHealthStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/sgroups.v1.SGroupsHostsAPI/UpdHealthStatus", runtime.WithHTTPPathPattern("/v1/hosts/upd-health-status"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SGroupsHostsAPI_UpdHealthStatus_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SGroupsHostsAPI_UpdHealthStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_ListSocketStatistics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -2492,6 +2539,23 @@ func RegisterSGroupsHostsAPIHandlerClient(ctx context.Context, mux *runtime.Serv
 		}
 		forward_SGroupsHostsAPI_UpdMetaInfo_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_UpdHealthStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/sgroups.v1.SGroupsHostsAPI/UpdHealthStatus", runtime.WithHTTPPathPattern("/v1/hosts/upd-health-status"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SGroupsHostsAPI_UpdHealthStatus_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SGroupsHostsAPI_UpdHealthStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_ListSocketStatistics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -2570,6 +2634,7 @@ var (
 	pattern_SGroupsHostsAPI_Watch_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "hosts", "watch"}, ""))
 	pattern_SGroupsHostsAPI_UpdIPs_0                = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "hosts", "upd-ips"}, ""))
 	pattern_SGroupsHostsAPI_UpdMetaInfo_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "hosts", "upd-metainfo"}, ""))
+	pattern_SGroupsHostsAPI_UpdHealthStatus_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "hosts", "upd-health-status"}, ""))
 	pattern_SGroupsHostsAPI_ListSocketStatistics_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "ss", "list"}, ""))
 	pattern_SGroupsHostsAPI_WatchSocketStatistics_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "ss", "watch"}, ""))
 	pattern_SGroupsHostsAPI_ListNft_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "nft", "list"}, ""))
@@ -2583,6 +2648,7 @@ var (
 	forward_SGroupsHostsAPI_Watch_0                 = runtime.ForwardResponseStream
 	forward_SGroupsHostsAPI_UpdIPs_0                = runtime.ForwardResponseMessage
 	forward_SGroupsHostsAPI_UpdMetaInfo_0           = runtime.ForwardResponseMessage
+	forward_SGroupsHostsAPI_UpdHealthStatus_0       = runtime.ForwardResponseMessage
 	forward_SGroupsHostsAPI_ListSocketStatistics_0  = runtime.ForwardResponseMessage
 	forward_SGroupsHostsAPI_WatchSocketStatistics_0 = runtime.ForwardResponseStream
 	forward_SGroupsHostsAPI_ListNft_0               = runtime.ForwardResponseMessage
